2003-12-14  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/dialog.glade: Add format controls for notes.
	* src/marriage.glade: Add format controls for notes.
	* src/gramps.glade: Add format controls for notes.

2003-12-13  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/KwordDoc.py (write_note): Implement function.
	* src/edit_person.glade: Correct hotkeys.
	* src/gramps.glade: Correct hotkey targets.
	* src/ChooseParents.py: Add hotkeys.

2003-12-12  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/HtmlDoc.py (write_note): Set monospace font family 
	for a preformatted note.
	* src/docgen/LaTeXDoc.py (write_note): Implement function.
	* src/docgen/PdfDoc.py (write_note): Implement function.
	* src/docgen/RTFDoc.py (write_note): Implement function.
	* src/docgen/AbiWordDoc.py (write_note): Implement function.
	* src/docgen/AbiWord2Doc.py (write_note): Implement function.
	* src/docgen/OpenOfficeDoc.py (write_note): Implement function.

2003-12-11  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WriteFtree.py (FtreeWriter.export): make sure that the 
	parents are in the id_map array

2003-12-11  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/PdfDoc.py (draw_text): Remove extra ",".
	* src/docgen/HtmlDoc.py (write_note): Use styles for preformatted note. 
	* src/edit_person.glade: Add tooltips and hotkeys to the radiobuttons.

	* src/edit_person.glade: Add from file and Add from database buttons.
	* src/EditPerson.py (__init__): Add handler for a new button.
	* src/ImageSelect.py (Gallery.on_select_photo_clicked): Add function.
	* src/marriage.glade: Add from file and Add from database buttons.
	* src/Marriage.py (__init__): Add handler for a new button.
	* src/gramps.glade (sourceEditor): Add from file and Add from database 
	buttons.
	* src/EditSource.py (__init__): Add handler for a new button.
	* src/places.glade: Add from file and Add from database buttons.
	* src/EditPlace.py (__init__): Add handler for a new button.
